--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,7 @@ before_install:
 
 before_script:
   - ./scripts/wait_for_emulator.sh
-  - adb shell input keyevent 82 & 
+  - adb shell input keyevent 82 &
+
+script:
+   - ./gradlew build connectedCheck
